Style: Terceira seção (leading) finalizada e responsiva

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -218,9 +218,41 @@ input[type=checkbox]{
     height: auto;
 }
 
-
-
 /* TERCEIRA SEÇÃO */
+.leading-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 220px 135px;
+    gap: 137px;
+}
+.leading-container img{
+    width: 650px;
+    height: 477px;
+}
+
+.leading-content{
+    width: 486px;
+    height: 388px;
+    text-align: left;
+}
+
+.leading-content h2{
+    font-size: 36px;
+    font-weight: bold;
+}
+
+.leading-content p{
+    color: var(--Third-color);
+    padding: 30px 0;
+}
+.leading-content button{
+    background-color: var(--fourth-color);
+    border: 1.4px solid var(--main-color);
+    color: var(--main-color);
+    font-weight: bold;
+}
+
 /* QUARTA SEÇÃO */
 /* QUINTA SEÇÃO */
 /* SEXTA SEÇÃO */
@@ -331,7 +363,6 @@ input[type=checkbox]{
     .line{
         border: 1px solid var(--second-color);
         border-radius: 5px;
-
     }
     
     .services-content{
@@ -378,6 +409,36 @@ input[type=checkbox]{
     }
 
     /* TERCEIRA SEÇÃO */
+    .leading-container{
+        flex-direction: column;
+        margin: 37px 81px;
+        gap: 70px;
+    }
+    .leading-container img{
+        width: 300px;
+        height: 220px;
+    }
+    
+    .leading-content{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 295px;
+        height: auto;
+        text-align: center;
+        margin: 0  40px;
+    }
+    
+    .leading-content h2{
+        font-size: 30px;
+        line-height: 50px;
+    }
+    
+    .leading-content p{
+        text-align: justify;
+        padding: 30px 0;
+    }
+    
     /* QUARTA SEÇÃO */
     /* QUINTA SEÇÃO */
     /* SEXTA SEÇÃO */
