--- a/src/style/style.css
+++ b/src/style/style.css
@@ -255,6 +255,48 @@ input[type=checkbox]{
 }
 
 /* QUARTA SEÇÃO */
+.download-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 71px;
+    margin: 0px 164px;
+}
+
+.download-container img{
+    width: 665px;
+    height: 434px;
+}
+
+.dowload-content{
+    width: 420px;
+    height: 375px;
+    margin-top: 36px;
+    text-align: left;
+}
+.dowload-content h2{
+   font-size: 36px;
+   font-weight: bold;
+}
+.dowload-content p{
+   color: var(--Third-color);
+   padding: 30px 0;
+}
+.dowload-content button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    background-color: var(--fourth-color);
+    border: 1.4px solid var(--main-color);
+    color: var(--main-color);
+    font-weight: bold;
+}
+.dowload-content img{
+   width: 15px;
+   height: 20px;
+}
+
 /* QUINTA SEÇÃO */
 /* SEXTA SEÇÃO */
 /* FOOTER */
@@ -439,8 +481,43 @@ input[type=checkbox]{
         text-align: justify;
         padding: 30px 0;
     }
-    
+
     /* QUARTA SEÇÃO */
+    .download-container{
+        margin: 80px 35px;
+        flex-direction: column-reverse;
+    }
+    
+    .download-container img{
+        width: 300px;
+        height: 195.79px;
+    }
+    
+    .dowload-content{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 306px;
+        height: auto;
+        margin-top: 0px;
+        text-align: center;
+    }
+    .dowload-content h2{
+       font-size: 30px;
+    }
+    .dowload-content p{
+       text-align: justify;
+    }
+
+    .dowload-content button{
+        gap: 6px;
+
+    }
+    .dowload-content img{
+       width: 10px;
+       height: 15px;
+    }
+
     /* QUINTA SEÇÃO */
     /* SEXTA SEÇÃO */
     /* FOOTER */
