--- a/src/style/style.css
+++ b/src/style/style.css
@@ -298,6 +298,90 @@ input[type=checkbox]{
 }
 
 /* QUINTA SEÇÃO */
+.comments-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    margin: 216px 190px;
+    gap:42px;
+}
+
+#comment-balls-blue{
+    width: 70px;
+    height: 118.54px;
+    margin: 0;
+    margin-right: 1200px;
+    top: 3900px;
+    position: absolute;
+}
+#comment-balls-white{
+    width: 70px;
+    height: 118.54px;
+    margin: 0;
+    margin-left: 1040px;
+    top: 3620px;
+    position: absolute;
+}
+
+.comments-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    background:  linear-gradient( 0.2turn, #5A98F2, #67C3F3); 
+    width: 1120px;
+    height: 425px;
+    border-radius: 24px;
+}
+.comments-content h2{
+    font-size: 36px;
+    color: var(--fourth-color);
+    font-weight: bold;
+    padding-bottom: 25px;
+    margin-top: 64px;
+}
+
+.line-white{
+    width: 56px;
+    border: 2px solid var(--fourth-color);
+    border-radius: 10px;
+}
+.card-comment{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 66px 118px;
+    gap: 109px;
+}
+
+.comment-about{
+    width: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.comment-about h3{
+    font-size: 22px;
+    color: var(--fourth-color);
+    font-weight: bold;
+    padding-left: 57px;
+} 
+.comment-about p{
+    color: var(--fourth-color);
+   
+} 
+
+.comment{
+    width: 420px;
+    font-size: 19px;
+    text-align: justify;
+    color: var(--fourth-color);
+}
+
 /* SEXTA SEÇÃO */
 /* FOOTER */
 
