--- a/src/style/style.css
+++ b/src/style/style.css
@@ -407,7 +407,7 @@ input[type=checkbox]{
     gap: 34px;
     align-items: center;
     margin-top: 79px;
-    position: absolute;
+    /* position: absolute; */
 }
 
 .article-card{
